<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/player1">
    </TextView>
    <EditText 
        android:id="@+id/player1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </EditText>
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/player2">
    </TextView>
    <EditText 
        android:id="@+id/player2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </EditText>
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vs_android">
    </TextView>
	<CheckBox
        android:id="@+id/vs_android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

	<TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/answer_time">
    </TextView>
    <Spinner
        android:id="@+id/answer_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amount_hint">
    </TextView>
    <Spinner
        android:id="@+id/amount_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/android_level">
    </TextView>
    <Spinner
        android:id="@+id/android_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <Button 
        android:id="@+id/play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play">
    </Button>
    
</LinearLayout>
