<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lpa.citygame.MainActivity" >

    <Button 
        android:id="@+id/continue_game"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/continue_game"
    />
    <Button 
        android:id="@+id/new_game"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/new_game"
    />
    <Button 
        android:id="@+id/list_citiest"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/list_cities"
    />
    <Button 
        android:id="@+id/rules"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/rules"
    />
</LinearLayout>
